--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -27,6 +27,7 @@ jobs:
     - name: Deploy
       if: "contains(github.event.head_commit.message, '--deploy') && contains(github.ref, 'main')"
       run: |
+       cd ./CopilotDev.NET.Api
        nuget pack -Prop Configuration=Release
        $nugetFile = Get-ChildItem *.nupkg | select-object name -ExpandProperty name
        nuget push $nugetFile ${{secrets.NUGET_API_KEY}} -Source https://api.nuget.org/v3/index.json
