--- a/CopilotDev.NET.Api/CopilotDev.NET.Api.nuspec
+++ b/CopilotDev.NET.Api/CopilotDev.NET.Api.nuspec
@@ -2,11 +2,11 @@
 <package >
 	<metadata>
 		<id>CopilotDev.NET.Api</id>
-		<version>1.0</version>
+		<version>1.1</version>
 		<title>Unofficial C# developer API for Github Copilot</title>
 		<authors>TheFortification</authors>
 		<requireLicenseAcceptance>false</requireLicenseAcceptance>
 		<license type="expression">MIT</license>
-		<description>Unofficial C# developer API for Github Copilot.</description>
+		<description>Unofficial C# developer API for Github Copilot. See https://github.com/copilotplayground/CopilotDev.NET </description>
 	</metadata>
 </package>
